# saki-controlplane/internal/gen/openapi/oas_response_encoders_gen.go
@@ -434,20 +434,6 @@ func encodeGetImportUploadSessionResponse(response *ImportUploadSession, w http.
 	return nil
 }
 
-func encodeGetPermissionCatalogResponse(response *PermissionCatalogResponse, w http.ResponseWriter, span trace.Span) error {
-	w.Header().Set("Content-Type", "application/json; charset=utf-8")
-	w.WriteHeader(200)
-	span.SetStatus(codes.Ok, http.StatusText(200))
-
-	e := new(jx.Encoder)
-	response.Encode(e)
-	if _, err := e.WriteTo(w); err != nil {
-		return errors.Wrap(err, "write")
-	}
-
-	return nil
-}
-
 func encodeGetProjectResponse(response *Project, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
